--- a/server/datastore/manifest.json
+++ b/server/datastore/manifest.json
@@ -10,7 +10,7 @@
                 "detail"	: "Vote for your peers and managers in thhe 2013 awards",
                 "startdate"	: "01/04/2014",
                 "enddate"	: "21/04/2014",
-                "filename"	: "annualawards2014.json"
+                "filename"	: "managerconf2014.json"
             }
 		]
 	}
