--- a/server/datastore/manifest.json
+++ b/server/datastore/manifest.json
@@ -7,7 +7,7 @@
             {
                 "id" 		: "managerconf2014",
                 "name"		: "2014 Manager Conference",
-                "detail"	: "A short set of 19 questions that will enable us to improve the managers conference. One entry at random will win an iPad mini",
+                "detail"	: "Vote for your peers and managers in thhe 2013 awards",
                 "startdate"	: "01/04/2014",
                 "enddate"	: "21/04/2014",
                 "filename"	: "managerconf2014.json"
